--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,22 +53,27 @@ jobs:
               CTRL_VERSION=$(echo ${{ github.ref }} | sed 's|^refs/tags/||')
               GIT_REF=${{ github.ref }}
               echo RELEASE_ACTION="" | tee -a $GITHUB_ENV
+              echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
+              echo BASE_VERSION=${{ env.CTRL_VERSION }} | tee -a $GITHUB_ENV
             else
               if [ "${{ github.event_name }}" = schedule -o -n "${{ inputs.schedule }}" ]
               then
                  CTRL_VERSION=${{ env.LAST_RELEASE }}
                  GIT_REF=${{ env.LAST_RELEASE }}
                  echo RELEASE_ACTION="" | tee -a $GITHUB_ENV
+                 echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
+                 echo BASE_VERSION=${{ env.CTRL_VERSION }} | tee -a $GITHUB_ENV
               else
                  CTRL_VERSION=v${{ steps.semvers.outputs.patch }}-pre$(git rev-parse --short HEAD)
                  GIT_REF=${{ github.ref }}
                  echo PREV_RELEASE=${{ env.LAST_RELEASE }} | tee -a $GITHUB_ENV
                  echo RELEASE_ACTION=--snapshot | tee -a $GITHUB_ENV
                  echo RELEASE_TAG=dev | tee -a $GITHUB_ENV
+                 echo BASE_VERSION=dev-${{ steps.semvers.outputs.patch }} | tee -a $GITHUB_ENV
               fi
             fi
             BUILD_VERSION=${CTRL_VERSION}-cfd${{ env.CLOUDFLARE_CLOUDFLARED_VERSION }}
-            if docker manifest inspect ghcr.io/mabels/cloudflared-controller:$BUILD_VERSION
+            if docker manifest inspect ghcr.io/mabels/cloudflared-controller:$(echo $BUILD_VERSION | sed 's/^v//')
             then
               echo "SKIP-RELEASE"
             else
