[skip ci] chore: fix schedule path

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,7 +57,7 @@ jobs:
               GIT_REF=${{ github.ref }}
               echo RELEASE_ACTION="" | tee -a $GITHUB_ENV
               echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
-              echo BASE_VERSION=${{ env.CTRL_VERSION }} | tee -a $GITHUB_ENV
+              echo BASE_VERSION=$(echo ${{ env.CTRL_VERSION }} | sed 's/^v//') | tee -a $GITHUB_ENV
             else
               if [ "${{ github.event_name }}" = schedule -o -n "${{ inputs.schedule }}" ]
               then
@@ -65,7 +65,7 @@ jobs:
                  GIT_REF=${{ env.LAST_RELEASE }}
                  echo RELEASE_ACTION="" | tee -a $GITHUB_ENV
                  echo RELEASE_TAG=latest | tee -a $GITHUB_ENV
-                 echo BASE_VERSION=${{ env.LAST_RELEASE }} | tee -a $GITHUB_ENV
+                 echo BASE_VERSION=$(echo ${{ env.LAST_RELEASE }} | sed 's/^v//') | tee -a $GITHUB_ENV
               else
                  CTRL_VERSION=v${{ steps.semvers.outputs.patch }}-pre$(git rev-parse --short HEAD)
                  GIT_REF=${{ github.ref }}
